--- a/EuDoutor/public/assets/estilo.css
+++ b/EuDoutor/public/assets/estilo.css
@@ -36,7 +36,7 @@
 }
 
 #log {
-  background-image: linear-gradient(to right, #bee1fc, #9bcef5, #9bcef5, #c7e7ff);
+  background-image: linear-gradient(to right, #ffffff, #f7fbff, #4fb3ff, #f7fbff);
 }
 
 .header {
