--- a/EuDoutor/views/cadastro.ejs
+++ b/EuDoutor/views/cadastro.ejs
@@ -83,7 +83,8 @@
                 <br><br>
                 <li class="txt_center2"><button class="txt2"><a href="/posts" class="link2">Posts</a></button></li>
                 <br><br>
-                <li class="txt_center3"><button class="txt3"><a href="/cadastro" class="link3">Cadastro</a></button></li>
+                <li class="txt_center3"><button class="txt3"><a href="/cadastro" class="link3">Cadastro</a></button>
+                </li>
                 <br><br>
             </ul>
         </nav>
@@ -94,6 +95,7 @@
             <h2 class="txt_center">Olá <%= name %>
             </h2>
             <p class="txt_center">Aqui é sua área restrita.</p>
+            <br>
             <form action="/add" method="post">
                 <label>Título:</label>
                 <br>
@@ -107,19 +109,21 @@
             </form>
             <br><br>
         </main>
-        
+
     </div>
 
     <footer class="footer">
         <img id="Face" src="/public/assets/img/Icon Facebook.png" alt="Facebook">
-        <a href="https://www.facebook.com/profile.php?id=100088262154683&mibextid=LQQJ4d" id="Facebook" target="_blank">Facebook</a>
+        <a href="https://www.facebook.com/profile.php?id=100088262154683&mibextid=LQQJ4d" id="Facebook"
+            target="_blank">Facebook</a>
         <img id="Insta" src="/public/assets/img/Icon Instagram.png" alt="Instagram">
-        <a href="https://www.instagram.com/eu_doutor_/?igshid=YmMyMTA2M2Y%3D" id="Instagram" target="_blank">Instagram</a>
+        <a href="https://www.instagram.com/eu_doutor_/?igshid=YmMyMTA2M2Y%3D" id="Instagram"
+            target="_blank">Instagram</a>
         <img id="tt" src="/public/assets/img/Icon Twitter.png" alt="">
         <a href="https://twitter.com/eudoutor_?s=21&t=hpyZEfbRcngtBVSQOkCeXQ" id="Twitter" target="_blank">Twitter</a>
         <!-- <img id="iconefelefone" src="img" alt="telefone"> -->
         <a href="#" id="Telefone">Telefone: +55 11 2902-1992</a>
-      </footer>
+    </footer>
 
 </body>
 
