--- a/EuDoutor/views/convenio.ejs
+++ b/EuDoutor/views/convenio.ejs
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EuDoutor</title>
-    <link rel="shortcut icon" href="img/icons8-médico-80.png" type="image/x-icon">
+    <link rel="shortcut icon" href="/public/assets/img/icons8-médico-80.png" type="image/x-icon">
     <link rel="stylesheet" href="/public/assets/convenio.css" type="text/css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
@@ -18,7 +18,7 @@
 <body>
     <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
-            <img src="img/icons8-médico-40.png" alt="Logo" width="80" height="80">
+            <img src="/public/assets/img/icons8-médico-40.png" alt="Logo" width="80" height="80">
             <a class="navbar-brand" href="/landing">EuDoutor</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
@@ -75,10 +75,13 @@
         </div>
     </nav>
 
+    <br>
     <h1 class="txt_center">Planos</h1>
+    <br>
     <div class="sections">
         <section id="s1">
-            <img src="img/PlanoIndividualPS.png" alt="" class="div_center">
+            <img src="/public/assets/img/PlanoIndividualPS.png" alt="" class="div_center">
+            <br>
             <p class="txt_center">
                 Plano para um único indivíduo.
             </p>
@@ -100,7 +103,8 @@
             <button class="acenter">Adquira agora</button>
         </section>
         <section id="s2">
-            <img src="img/PlanoFamiliaPS.png" alt="" class="div_center">
+            <img src="/public/assets/img/PlanoFamiliaPS.png" alt="" class="div_center">
+            <br>
             <p class="txt_center">
                 Plano para toda a família.
             </p>
@@ -125,7 +129,8 @@
             <button class="bcenter">Adquira agora</button>
         </section>
         <section id="s3">
-            <img src="img/PlanoTerceiraIdadePS.png" alt="" class="div_center">
+            <img src="/public/assets/img/PlanoTerceiraIdadePS.png" alt="" class="div_center">
+            <br>
             <p class="txt_center">
                 Plano para idosos com mais de 60 anos.
             </p>
@@ -151,11 +156,11 @@
         </section>
     </div>
     <footer class="footer">
-        <img id="Face" src="img/Icon Facebook.png" alt="Facebook" >
+        <img id="Face" src="/public/assets/img/Icon Facebook.png" alt="Facebook">
         <a href="#" id="Facebook">Facebook</a>
-        <img id="Insta" src="img/Icon Instagram.png" alt="Instagram">
+        <img id="Insta" src="/public/assets/img/Icon Instagram.png" alt="Instagram">
         <a href="#" id="Instagram">Instagram</a>
-        <img id="tt" src="img/Icon Twitter.png" alt="">
+        <img id="tt" src="/public/assets/img/Icon Twitter.png" alt="">
         <a href="#" id="Twitter">Twitter</a>
         <!-- <img id="iconefelefone" src="img" alt="telefone"> -->
         <a href="#" id="Telefone">Telefone: +55 11 2902-1992</a>
