--- a/EuDoutor/views/index.ejs
+++ b/EuDoutor/views/index.ejs
@@ -101,12 +101,14 @@
 
     <footer id="footer">
         <img id="Face" src="/public/assets/img/Icon Facebook.png" alt="Facebook">
-        <a href="https://www.facebook.com/profile.php?id=100088262154683&mibextid=LQQJ4d" id="Facebook" target="_blank">Facebook</a>
+        <a href="https://www.facebook.com/profile.php?id=100088262154683&mibextid=LQQJ4d" id="Facebook"
+            target="_blank">Facebook</a>
         <img id="Insta" src="/public/assets/img/Icon Instagram.png" alt="Instagram">
-        <a href="https://www.instagram.com/eu_doutor_/?igshid=YmMyMTA2M2Y%3D" id="Instagram" target="_blank">Instagram</a>
+        <a href="https://www.instagram.com/eu_doutor_/?igshid=YmMyMTA2M2Y%3D" id="Instagram"
+            target="_blank">Instagram</a>
         <img id="tt" src="/public/assets/img/Icon Twitter.png" alt="">
         <a href="https://twitter.com/eudoutor_?s=21&t=hpyZEfbRcngtBVSQOkCeXQ" id="Twitter" target="_blank">Twitter</a>
-         <!-- <img id="iconefelefone" src="/public/assets/img/" alt="telefone"> --> 
+        <!-- <img id="iconefelefone" src="/public/assets/img/" alt="telefone"> -->
         <a href="#" id="Telefone">Telefone: +55 11 2902-1992</a>
     </footer>
 
