--- a/EuDoutor/views/ortopedia.ejs
+++ b/EuDoutor/views/ortopedia.ejs
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EuDoutor</title>
-    <link rel="shortcut icon" href="img/icons8-médico-80.png" type="image/x-icon">
+    <link rel="shortcut icon" href="/public/assets/img/icons8-médico-80.png" type="image/x-icon">
     <link rel="stylesheet" href="/public/assets/ortopedia.css" type="text/css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
@@ -18,7 +18,7 @@
 <body>
     <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
-            <img src="img/icons8-médico-40.png" alt="Logo" width="80" height="80">
+            <img src="/public/assets/img/icons8-médico-40.png" alt="Logo" width="80" height="80">
             <a class="navbar-brand" href="/landing">EuDoutor</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
@@ -87,7 +87,7 @@
 
 
         <section id="s1">
-            <img src="img/Dra JadePS.png" alt="" id="img1_s1">
+            <img src="/public/assets/img/Dra JadePS.png" alt="" id="img1_s1">
             <p id="p_s1">Sou ortopedista com mais de 15 anos de carreira, e apaixonada pela profissão e pela
                 possibilidade de
                 oferecer mais bem-estar aos pacientes. Já comandei mais de 5.000 cirurgias e possuo um profundo
@@ -95,13 +95,13 @@
                 esportiva.</p>
         </section>
         <section id="s2">
-            <img src="img/Dr LeePS.jpg" alt="" id="img2_s2">
+            <img src="/public/assets/img/Dr LeePS.jpg" alt="" id="img2_s2">
             <p id="p_s2">Me graduei em Medicina na Universidade de São Paulo. Fui médico residente no Instituto de
                 Ortopedia e Traumatologia do Hospital das Clínicas da Faculdade de Medicina da Universidade de São
                 Paulo. Especializado em Cirurgia do Pé e Tornozelo no IOT – HC – FMUSP.</p>
         </section>
         <section id="s3">
-            <img src="img/Dra VanessaPS.jpg" alt="" id="img3_s3">
+            <img src="/public/assets/img/Dra VanessaPS.jpg" alt="" id="img3_s3">
             <p id="p_s3">Sou formada em Medicina pela Faculdade de Medicina de São José do Rio Preto (FAMERP) e concluí
                 a Residência médica em Ortopedia e Traumatologia pelo Hospital das Clínicas da Faculdade de Medicina da
                 Universidade de São Paulo , com título de especialista em Ortopedia e Traumatologia pela Sociedade
@@ -109,11 +109,11 @@
         </section>
 
         <footer class="footer">
-            <img id="Face" src="img/Icon Facebook.png" alt="Facebook">
+            <img id="Face" src="/public/assets/img/Icon Facebook.png" alt="Facebook">
             <a href="#" id="Facebook">Facebook</a>
-            <img id="Insta" src="img/Icon Instagram.png" alt="Instagram">
+            <img id="Insta" src="/public/assets/img/Icon Instagram.png" alt="Instagram">
             <a href="#" id="Instagram">Instagram</a>
-            <img id="tt" src="img/Icon Twitter.png" alt="">
+            <img id="tt" src="/public/assets/img/Icon Twitter.png" alt="">
             <a href="#" id="Twitter">Twitter</a>
             <a href="#" id="Telefone">Telefone: +55 11 2902-1992</a>
         </footer>
