--- a/EuDoutor/views/home.ejs
+++ b/EuDoutor/views/home.ejs
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/public/assets/estilo.css" type="text/css">
-    <title>Document</title>
+    <title>EuDoutor</title>
+    <link rel="shortcut icon" href="img/icons8-médico-80.png" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
@@ -17,7 +18,7 @@
 <body>
     <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
-            <img src="img/icons8-médico-40.png" alt="Logo" width="80" height="80">
+            <img src="/public/assets/img/icons8-médico-40.png" alt="Logo" width="80" height="80">
             <a class="navbar-brand" href="/landing">EuDoutor</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
@@ -91,16 +92,16 @@
     </div>
 
     <footer class="footer">
-        <img id="Face" src="img/Icon Facebook.png" alt="Facebook">
+        <img id="Face" src="/public/assets/img/Icon Facebook.png" alt="Facebook">
         <a href="#" id="Facebook">Facebook</a>
-        <img id="Insta" src="img/Icon Instagram.png" alt="Instagram">
+        <img id="Insta" src="/public/assets/img/Icon Instagram.png" alt="Instagram">
         <a href="#" id="Instagram">Instagram</a>
-        <img id="tt" src="img/Icon Twitter.png" alt="">
+        <img id="tt" src="/public/assets/img/Icon Twitter.png" alt="">
         <a href="#" id="Twitter">Twitter</a>
         <!-- <img id="iconefelefone" src="img" alt="telefone"> -->
         <a href="#" id="Telefone">Telefone: +55 11 2902-1992</a>
     </footer>
-    
+
 </body>
 
 </html>
