--- a/EuDoutor/views/login.ejs
+++ b/EuDoutor/views/login.ejs
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/public/assets/styles.css" type="text/css">
-    <title>Document</title>
+    <title>EuDoutor</title>
+    <link rel="shortcut icon" href="img/icons8-médico-80.png" type="image/x-icon">
 </head>
 
 <body>
