--- a/EuDoutor/views/oftalmologia.ejs
+++ b/EuDoutor/views/oftalmologia.ejs
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EuDoutor</title>
-    <link rel="shortcut icon" href="img/icons8-médico-80.png" type="image/x-icon">
+    <link rel="shortcut icon" href="/public/assets/img/icons8-médico-80.png" type="image/x-icon">
     <link rel="stylesheet" href="/public/assets/oftalmologia.css" type="text/css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
@@ -18,7 +18,7 @@
 <body>
     <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
-            <img src="img/icons8-médico-40.png" alt="Logo" width="80" height="80">
+            <img src="/public/assets/img/icons8-médico-40.png" alt="Logo" width="80" height="80">
             <a class="navbar-brand" href="/landing">EuDoutor</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
@@ -84,29 +84,34 @@
     </div>
 
     <section id="s1">
-        <img src="img/Dr LucioPS.jpg" alt="" id="img1_s1">
+        <img src="/public/assets/img/Dr LucioPS.jpg" alt="" id="img1_s1">
         <p id="p_s1">Oftalmologista especialista em Plástica Ocular.
-            Atuo na prevenção, diagnóstico e tratamento de doenças que comprometem a região das pálpebras há mais de 16 anos. Não somente nas patologias, mas também na parte estética. Graduada em Medicina e Oftlamologia pela UNIFESP ( Universidade Federal de Sao Paulo).</p>
+            Atuo na prevenção, diagnóstico e tratamento de doenças que comprometem a região das pálpebras há mais de 16
+            anos. Não somente nas patologias, mas também na parte estética. Graduada em Medicina e Oftlamologia pela
+            UNIFESP ( Universidade Federal de Sao Paulo).</p>
     </section>
     <section id="s2">
-        <img src="img/Dra AnaPS.png" alt="" id="img2_s2">
+        <img src="/public/assets/img/Dra AnaPS.png" alt="" id="img2_s2">
         <p id="p_s2">Oftalmologista com experiência de 20 anos em atendimento clínico e cirúrgico.
-            Sou especializada nas diversas cirurgias oftalmológicas, desde as cirurgias de pequeno porte até as mais complexas.
-            </p>
+            Sou especializada nas diversas cirurgias oftalmológicas, desde as cirurgias de pequeno porte até as mais
+            complexas.
+        </p>
     </section>
     <section id="s3">
-        <img src="img/Dr DaviPS.jpg" alt="" id="img3_s3">
-        <p id="p_s3">Título de especialista pelo Conselho Brasileiro de Oftalmologia. Formado pela Escola Paulista de medicina, com mais de 30 anos de experiência.
+        <img src="/public/assets/img/Dr DaviPS.jpg" alt="" id="img3_s3">
+        <p id="p_s3">Título de especialista pelo Conselho Brasileiro de Oftalmologia. Formado pela Escola Paulista de
+            medicina, com mais de 30 anos de experiência.
             Especializado em cirurgia de Catarata e Laser para Miopia, Hipermetropia e Astigmatismo.
-            Acredito que meu  diferencial seja a paciência e dedicação com o tratamento aos meus pacientes e também a pontualidade no atendimento.</p>
+            Acredito que meu diferencial seja a paciência e dedicação com o tratamento aos meus pacientes e também a
+            pontualidade no atendimento.</p>
     </section>
 
     <footer class="footer">
-        <img id="Face" src="img/Icon Facebook.png" alt="Facebook" >
+        <img id="Face" src="/public/assets/img/Icon Facebook.png" alt="Facebook">
         <a href="#" id="Facebook">Facebook</a>
-        <img id="Insta" src="img/Icon Instagram.png" alt="Instagram">
+        <img id="Insta" src="/public/assets/img/Icon Instagram.png" alt="Instagram">
         <a href="#" id="Instagram">Instagram</a>
-        <img id="tt" src="img/Icon Twitter.png" alt="">
+        <img id="tt" src="/public/assets/img/Icon Twitter.png" alt="">
         <a href="#" id="Twitter">Twitter</a>
         <!-- <img id="iconefelefone" src="img" alt="telefone"> -->
         <a href="#" id="Telefone">Telefone: +55 11 2902-1992</a>
