--- a/EuDoutor/views/register.ejs
+++ b/EuDoutor/views/register.ejs
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/public/assets/styles.css" type="text/css">
-    <title>Document</title>
+    <title>EuDoutor</title>
+    <link rel="shortcut icon" href="/public/assets/img/icons8-médico-80.png" type="image/x-icon">
 </head>
 
 <body>
@@ -15,7 +16,7 @@
             <h1 class="txt_up">Cadastre-se</h1>
             <form action="/register" method="post" class="content">
                 <div class="center">
-                    <img src="" alt=""> 
+                    <img src="" alt="">
                     <!-- Imagem logo medico ou paciente -->
                 </div>
                 <div class="center">
