--- a/EuDoutor/views/index.ejs
+++ b/EuDoutor/views/index.ejs
@@ -53,16 +53,8 @@
                                 <li><a class="dropdown-item" href="/oftalmologia">Oftalmologia</a></li>
                             </ul>
                         </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                                aria-expanded="false">
-                                Atendimentos
-                            </a></a>
-                            <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="#">Futuros Atendimentos</a></li>
-                                <li><a class="dropdown-item" href="#">Últimos Atendimentos</a></li>
-                                <li><a class="dropdown-item" href="#">Resultados de exames</a></li>
-                            </ul>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/">MeuDoutor</a>
                         </li>
                         <div>
                             <form action="/logout?_method=DELETE" method="post">
@@ -81,9 +73,11 @@
             <ul>
                 <li class="txt_center"><button class="txt1"><a href="/" class="link1">Index</a></button></li>
                 <br><br>
-                <li class="txt_center"><button class="txt2"><a href="/posts" class="link2">Posts</a></button></li>
+                <li class="txt_center"><button class="txt2"><a href="/posts" class="link2">Atestados
+                            criados</a></button></li>
                 <br><br>
-                <li class="txt_center"><button class="txt3"><a href="/cadastro" class="link3">Cadastro</a></button></li>
+                <li class="txt_center"><button class="txt3"><a href="/cadastro" class="link3">Criar
+                            atestados</a></button></li>
                 <br><br>
             </ul>
         </nav>
