--- a/EuDoutor/views/login.ejs
+++ b/EuDoutor/views/login.ejs
@@ -32,7 +32,9 @@
                 <button type="submit" class="center">Logar!</button>
             </form>
             <p class="txt_down">Não possui um cadastro? <a href="/register">Faça seu cadastro.</a></p>
-        </div>
+            <br>
+            <p><a href="/landing_?">Continue navegando sem cadastro</a></p>
+       </div>
     </div>
 </body>
 
