--- a/EuDoutor/views/oftalmologiaNT.ejs
+++ b/EuDoutor/views/oftalmologiaNT.ejs
@@ -19,7 +19,7 @@
     <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
             <img src="/public/assets/img/icons8-médico-40.png" alt="Logo" width="80" height="80">
-            <a class="navbar-brand" href="/landing">EuDoutor</a>
+            <a class="navbar-brand" href="/landing_?">EuDoutor</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -34,13 +34,13 @@
                                 Sobre nós
                             </a>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="/landing">Unidades</a></li>
-                                <li><a class="dropdown-item" href="/landing">Equipamentos</a></li>
-                                <li><a class="dropdown-item" href="/landing">Feedback</a></li>
+                                <li><a class="dropdown-item" href="/landing_?">Unidades</a></li>
+                                <li><a class="dropdown-item" href="/landing_?">Equipamentos</a></li>
+                                <li><a class="dropdown-item" href="/landing_?">Feedback</a></li>
                             </ul>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/convenio">Convênios</a>
+                            <a class="nav-link" href="/convenio_?">Convênios</a>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
@@ -48,18 +48,16 @@
                                 Especialidades
                             </a></a>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="/pediatria">Pediatria</a></li>
-                                <li><a class="dropdown-item" href="/ortopedia">Ortopedia</a></li>
-                                <li><a class="dropdown-item" href="/oftalmologia">Oftalmologia</a></li>
+                                <li><a class="dropdown-item" href="/pediatria_?">Pediatria</a></li>
+                                <li><a class="dropdown-item" href="/ortopedia_?">Ortopedia</a></li>
+                                <li><a class="dropdown-item" href="/oftalmologia_?">Oftalmologia</a></li>
                             </ul>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/">MeuDoutor</a>
+                            <a class="nav-link" href="/home">MeuDoutor</a>
                         </li>
                         <div>
-                            <form action="/logout?_method=DELETE" method="post">
-                                <button type="submit" id="log">Logout</button>
-                            </form>
+                            <button type="submit" id="log"><a href="/login">Login</a></button>
                         </div>
                     </ul>
                 </div>
