--- a/EuDoutor/views/pediatria.ejs
+++ b/EuDoutor/views/pediatria.ejs
@@ -53,20 +53,12 @@
                                 <li><a class="dropdown-item" href="/oftalmologia">Oftalmologia</a></li>
                             </ul>
                         </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                                aria-expanded="false">
-                                Atendimentos
-                            </a></a>
-                            <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="#">Futuros Atendimentos</a></li>
-                                <li><a class="dropdown-item" href="#">Últimos Atendimentos</a></li>
-                                <li><a class="dropdown-item" href="#">Resultados de exames</a></li>
-                            </ul>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/">MeuDoutor</a>
                         </li>
                         <div>
                             <form action="/logout?_method=DELETE" method="post">
-                                <button type="submit" class="log">Logout</button>
+                                <button type="submit" id="log">Logout</button>
                             </form>
                         </div>
                     </ul>
