--- a/EuDoutor/views/pediatriaNT.ejs
+++ b/EuDoutor/views/pediatriaNT.ejs
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EuDoutor</title>
     <link rel="shortcut icon" href="/public/assets/img/icons8-médico-80.png" type="image/x-icon">
-    <link rel="stylesheet" href="/public/assets/oftalmologia.css" type="text/css">
+    <link rel="stylesheet" href="/public/assets/pediatria.css" type="text/css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
@@ -19,7 +19,7 @@
     <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
             <img src="/public/assets/img/icons8-médico-40.png" alt="Logo" width="80" height="80">
-            <a class="navbar-brand" href="/landing">EuDoutor</a>
+            <a class="navbar-brand" href="/landing_?">EuDoutor</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -34,13 +34,13 @@
                                 Sobre nós
                             </a>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="/landing">Unidades</a></li>
-                                <li><a class="dropdown-item" href="/landing">Equipamentos</a></li>
-                                <li><a class="dropdown-item" href="/landing">Feedback</a></li>
+                                <li><a class="dropdown-item" href="/landing_?">Unidades</a></li>
+                                <li><a class="dropdown-item" href="/landing_?">Equipamentos</a></li>
+                                <li><a class="dropdown-item" href="/landing_?">Feedback</a></li>
                             </ul>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/convenio">Convênios</a>
+                            <a class="nav-link" href="/convenio_?">Convênios</a>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
@@ -48,18 +48,16 @@
                                 Especialidades
                             </a></a>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="/pediatria">Pediatria</a></li>
-                                <li><a class="dropdown-item" href="/ortopedia">Ortopedia</a></li>
-                                <li><a class="dropdown-item" href="/oftalmologia">Oftalmologia</a></li>
+                                <li><a class="dropdown-item" href="/pediatria_?">Pediatria</a></li>
+                                <li><a class="dropdown-item" href="/ortopedia_?">Ortopedia</a></li>
+                                <li><a class="dropdown-item" href="/oftalmologia_?">Oftalmologia</a></li>
                             </ul>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/">MeuDoutor</a>
+                            <a class="nav-link" href="/home">MeuDoutor</a>
                         </li>
                         <div>
-                            <form action="/logout?_method=DELETE" method="post">
-                                <button type="submit" id="log">Logout</button>
-                            </form>
+                            <button type="submit" id="log"><a href="/login">Login</a></button>
                         </div>
                     </ul>
                 </div>
@@ -68,34 +66,35 @@
     </nav>
 
     <div class="container">
-        <h1 id="txt_center1">Oftalmologia</h1>
-        <P id="txt_center2">A Oftalmologia é uma das especialidades da Medicina que investiga e trata as doenças
-            relacionadas com a visão e com os olhos e seus anexos.Esta especialidade médica se dedica ao estudo e
-            tratamento das doenças e erros de refração (grau) apresentados pelo olho.</P>
-        <h1 class="txt_center3">Especialistas</h1>
+        <h1 class="txt_center">Pediatria</h1>
+        <P class="txt_center">Crianças e adolescentes que apresentarem sintomas de doenças devem ir ao pediatra, esse
+            profissional tem a capacidade de compreender as características da infância e adolescência, bem como o seu
+            desenvolvimento e as consequências de doenças nesse público, e orientar os pais para garantir um crescimento
+            e
+            desenvolvimento saudáveis aos filhos.</P>
+        <h1 class="txt_center">Especialistas</h1>
     </div>
-
     <section id="s1">
-        <img src="/public/assets/img/Dr LucioPS.jpg" alt="" id="img1_s1">
-        <p id="p_s1">Oftalmologista especialista em Plástica Ocular.
-            Atuo na prevenção, diagnóstico e tratamento de doenças que comprometem a região das pálpebras há mais de 16
-            anos. Não somente nas patologias, mas também na parte estética. Graduada em Medicina e Oftlamologia pela
-            UNIFESP ( Universidade Federal de Sao Paulo).</p>
+        <img src="/public/assets/img/Dra EmillyPS.jpg" alt="" id="img1_s1">
+        <p id="p_s1">Sou formada em medicina pela PUC (SP). Possuo experiência em cuidados com bebês prematuros e
+            provenientes de gestações de alto risco, tiro dúvidas e oriento os pais sobre o que há de vir. Faço também
+            sala de parto e seguimento após o nascimento através da puericultura (acompanhamento do desenvolvimento do
+            bebê).
+        </p>
     </section>
     <section id="s2">
-        <img src="/public/assets/img/Dra AnaPS.png" alt="" id="img2_s2">
-        <p id="p_s2">Oftalmologista com experiência de 20 anos em atendimento clínico e cirúrgico.
-            Sou especializada nas diversas cirurgias oftalmológicas, desde as cirurgias de pequeno porte até as mais
-            complexas.
+        <img src="/public/assets/img/Dr RonaldoPS.jpg" alt="" id="img2_s2">
+        <p id="p_s2">Sou formado em medicina desde 2011, pela Universidade Cidade de São Paulo, e notei minha paixão
+            pela pediatria no 4º ano da graduação, ao passar pelo estágio da pediatria, onde percebi que existia um
+            grande interesse e fascínio em cuidar das crianças.
         </p>
     </section>
     <section id="s3">
-        <img src="/public/assets/img/Dr DaviPS.jpg" alt="" id="img3_s3">
-        <p id="p_s3">Título de especialista pelo Conselho Brasileiro de Oftalmologia. Formado pela Escola Paulista de
-            medicina, com mais de 30 anos de experiência.
-            Especializado em cirurgia de Catarata e Laser para Miopia, Hipermetropia e Astigmatismo.
-            Acredito que meu diferencial seja a paciência e dedicação com o tratamento aos meus pacientes e também a
-            pontualidade no atendimento.</p>
+        <img src="/public/assets/img/Dra JanettPS.png" alt="" id="img3_s3">
+        <p id="p_s3">Me formei em medicina em 2013, pela Universidade Federal do Mato Grosso (UFMT). Trabalho com
+            crianças desde 2014, atuei em hospitais, na área de urgência e emergência. Agora exerço a gastropediatria,
+            acompanhando crianças com diversas doenças no trato gastrointestinal, como alergias alimentares,
+            intolerâncias, diarreias, constipação, refluxo, dentre outras.</p>
     </section>
 
     <footer class="footer">
