--- a/EuDoutor/public/assets/convenio.css
+++ b/EuDoutor/public/assets/convenio.css
@@ -25,11 +25,9 @@
 .socialmedia {
   text-align: right;
 }
-
 .socialphone {
   text-align: left;
 }
-
 .sections {
   display: grid;
   grid-template: 90vh/ 1fr 1fr 1fr;
@@ -38,10 +36,9 @@
   width: 100%;
   height: 100%;
 }
-
 #s1 {
   grid-area: s1;
-  background-color: #d3edff;
+  background-color: #ddeefc;
   padding-top: 10%;
   margin-left: 5%;
   margin-right: 5%;
@@ -49,7 +46,6 @@
   border-style: solid;
   border-color: black;
 }
-
 #s2 {
   grid-area: s2;
   background-color: #d3edff;
@@ -60,7 +56,6 @@
   border-style: solid;
   border-color: black;
 }
-
 #s3 {
   grid-area: s3;
   background-color: #d3edff;
@@ -71,88 +66,102 @@
   border-style: solid;
   border-color: black;
 }
-
 .acenter {
   height: 5%;
   width: 15%;
   left: 9%;
-  top: 99%;
+  top: 100%;
   font-size: 90%;
   position: absolute;
 }
-
 .bcenter {
   height: 5%;
   width: 15%;
-  top: 99%;
+  top: 100%;
   left: 42.5%;
   font-size: 90%;
   position: absolute;
 }
-
 .ccenter {
   height: 5%;
   width: 15%;
-  top: 99%;
+  top: 106%;
   left: 75.6%;
   font-size: 90%;
   position: absolute;
 }
-
 .footer {
-  background-color: grey;
   position: absolute;
-  top: 116%;
+  top: 120%;
   width: 100%;
   height: 10%;
+  background-color:
+    /* grey*/
+    #C7E7FF;
 }
-
 #Facebook {
   text-decoration: none;
   position: absolute;
-  right: 2%;
+  right: 9%;
+  color: black;
 }
-
 #Instagram {
   text-decoration: none;
   position: absolute;
-  right: 2%;
+  right: 9%;
   top: 35%;
+  color: black;
 }
-
 #Twitter {
   text-decoration: none;
   position: absolute;
-  right: 3.5%;
+  right: 9%;
   top: 65%;
+  color: black;
 }
-
+#Telefone {
+  left: 2%;
+  position: absolute;
+  text-decoration: none;
+  top: 35%;
+  color: black;
+}
 #Face {
   width: 1.3%;
   position: absolute;
+  right: 27.5%;
   top: 5%;
-  right: 7.5%;
+  right: 15%;
 }
-
 #Insta {
   width: 1.3%;
+  right: 20.2%;
   position: absolute;
   top: 35%;
-  right: 7.5%;
+  right: 15%;
 }
-
 #tt {
   right: 12.4%;
   top: 65%;
   position: absolute;
-  right: 7.5%;
+  right: 15%;
 }
-
-#Telefone {
-  left: 1%;
+#log {
+  width: 10%;
   position: absolute;
+  left: 85%;
   text-decoration: none;
-  top: 35%;
+  border: none;
+  cursor: pointer;
+  background-size: 230%;
+  transition: 0.5s;
+}
+#log:hover {
+  background-position: right;
+}
+#log {
+  background-image: linear-gradient(to right, #ffffff, #f7fbff, #4fb3ff, #f7fbff);
+  
 }
 
 @media only screen and (max-width: 950px) {
