--- a/EuDoutor/public/assets/estilo.css
+++ b/EuDoutor/public/assets/estilo.css
@@ -77,6 +77,7 @@
   position: absolute;
   top: 56.5%;
   left: 15%;
+  height: 8%;
   border: none;
   cursor: pointer;
   color: rgb(#c7e7ff, #41acfd, #c7e7ff, #41acfd);
@@ -95,7 +96,7 @@
 .txt3 {
   text-decoration: none;
   position: absolute;
-  top: 63%;
+  top: 67%;
   left: 15%;
   border: none;
   cursor: pointer;
@@ -284,7 +285,23 @@ button {
     top: 70%;
     left: 10%;
   }
-
+.txt3 {
+  text-decoration: none;
+  position: absolute;
+  top: 73%;
+  left: 10%;
+  border: none;
+  cursor: pointer;
+  color: rgb(#c7e7ff, #41acfd, #c7e7ff, #41acfd);
+  background-size: 230%;
+  transition: 0.5s;
+}
+.txt3:hover {
+  background-position: right;
+}
+.txt3 {
+  background-image: linear-gradient(to left, #bee1fc, #9bcef5, #9bcef5, #c7e7ff);
+}
   .footer {
     background-color: #C7E7FF;
     position: absolute;
@@ -292,14 +309,12 @@ button {
     width: 100%;
     height: 10%;
   }
-
   #Facebook {
     text-decoration: none;
     position: absolute;
     right: 6%;
     color: black;
   }
-
   #Instagram {
     text-decoration: none;
     position: absolute;
@@ -307,7 +322,6 @@ button {
     top: 35%;
     color: black;
   }
-
   #Twitter {
     text-decoration: none;
     position: absolute;
@@ -315,7 +329,6 @@ button {
     top: 65%;
     color: black;
   }
-
   #Face {
     width: 1.3%;
     position: absolute;
@@ -323,7 +336,6 @@ button {
     top: 5%;
     right: 15%;
   }
-
   #Insta {
     width: 1.3%;
     right: 20.2%;
@@ -331,14 +343,12 @@ button {
     top: 35%;
     right: 15%;
   }
-
   #tt {
     right: 12.4%;
     top: 65%;
     position: absolute;
     right: 15%;
   }
-
   #Telefone {
     left: 2%;
     position: absolute;
@@ -346,7 +356,6 @@ button {
     top: 35%;
     color: black;
   }
-
   .center {
     position: absolute;
     left: 35%;
@@ -373,28 +382,24 @@ button {
       height: 30%;
       width: 25%;
     }
-
     .txt1 {
       text-decoration: none;
       position: absolute;
-      top: 55%;
+      top: 57%;
       left: 10%;
     }
-
     .txt2 {
       text-decoration: none;
       position: absolute;
-      top: 62%;
+      top: 65%;
       left: 10%;
     }
-
     .txt3 {
       text-decoration: none;
       position: absolute;
-      top: 69%;
+      top: 75%;
       left: 10%;
     }
-
     .footer {
       background-color: #C7E7FF;
       position: absolute;
@@ -402,14 +407,12 @@ button {
       width: 100%;
       height: 10%;
     }
-
     #Facebook {
       text-decoration: none;
       position: absolute;
       right: 4%;
       color: black;
     }
-
     #Instagram {
       text-decoration: none;
       position: absolute;
@@ -417,7 +420,6 @@ button {
       top: 35%;
       color: black;
     }
-
     #Twitter {
       text-decoration: none;
       position: absolute;
@@ -425,30 +427,24 @@ button {
       top: 65%;
       color: black;
     }
-
     #Face {
       width: 2.5%;
       position: absolute;
       right: 16%;
       top: 5%;
-
     }
-
     #Insta {
       position: absolute;
       width: 2.5%;
       right: 16%;
       top: 39%;
-
     }
-
     #tt {
       position: absolute;
       right: 15.5%;
       top: 65%;
       width: 3.5%;
     }
-
     #Telefone {
       left: 2%;
       position: absolute;
@@ -456,7 +452,6 @@ button {
       top: 35%;
       color: black;
     }
-
     @media screen and (max-width:500px) {
       .header {
         width: 100%;
@@ -467,7 +462,6 @@ button {
         left: 30%;
         width: 56%;
       }
-
       #log {
         position: relative;
         top: 70%;
@@ -475,31 +469,28 @@ button {
         height: 30%;
         width: 25%;
       }
-
       .txt1 {
         text-decoration: none;
         position: absolute;
-        top: 55%;
+        top: 56%;
         left: 8%;
-        width: 15%;
+        width: 17%;
       }
-
       .txt2 {
         text-decoration: none;
         position: absolute;
-        top: 62%;
+        top: 63%;
         left: 8%;
-        width: 15%;
+        width: 17%;
       }
-
       .txt3 {
         text-decoration: none;
         position: absolute;
-        top: 69%;
+        top: 73%;
         left: 8%;
-        width: 15%;
+        width: 17%;
+        height: 8%;
       }
-
       .footer {
         background-color: #C7E7FF;
         position: absolute;
@@ -507,14 +498,12 @@ button {
         width: 100%;
         height: 10%;
       }
-
       #Facebook {
         text-decoration: none;
         position: absolute;
         right: 4%;
         color: black;
       }
-
       #Instagram {
         text-decoration: none;
         position: absolute;
@@ -522,7 +511,6 @@ button {
         top: 35%;
         color: black;
       }
-
       #Twitter {
         text-decoration: none;
         position: absolute;
@@ -530,30 +518,24 @@ button {
         top: 65%;
         color: black;
       }
-
       #Face {
         width: 2.5%;
         position: absolute;
         right: 19%;
         top: 5%;
-
       }
-
       #Insta {
         position: absolute;
         width: 2.5%;
         right: 19%;
         top: 39%;
-
       }
-
       #tt {
         position: absolute;
         right: 18.5%;
         top: 65%;
         width: 3.5%;
       }
-
       #Telefone {
         left: 2%;
         position: absolute;
@@ -590,25 +572,25 @@ button {
       .txt1 {
         text-decoration: none;
         position: absolute;
-        top: 55%;
-        left: 8%;
-        width: 18%;
+        top: 58%;
+        left: 7%;
+        width: 20%;
       }
 
       .txt2 {
         text-decoration: none;
         position: absolute;
-        top: 62%;
-        left: 8%;
-        width: 18%;
+        top: 65%;
+        left: 7%;
+        width: 20%;
       }
 
       .txt3 {
         text-decoration: none;
         position: absolute;
-        top: 69%;
-        left: 8%;
-        width: 18%;
+        top: 75%;
+        left: 7%;
+        width: 20%;
       }
 
       .footer {
